[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/img/walk-person-png.webp" type="Texture" id=1]
[ext_resource path="res://scripts/Musicos.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="musico1" type="TextureButton" parent="."]
margin_left = 170.136
margin_top = 137.544
margin_right = 301.136
margin_bottom = 415.544
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musico2" type="TextureButton" parent="."]
margin_left = 477.904
margin_top = 172.861
margin_right = 608.904
margin_bottom = 450.861
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musico3" type="TextureButton" parent="."]
margin_left = 758.763
margin_top = 144.271
margin_right = 889.763
margin_bottom = 422.271
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 380.0
margin_top = 37.0
margin_right = 618.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Elige un musico para tocar una pieza"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="musico1" to="." method="_on_musico1_pressed"]
[connection signal="pressed" from="musico2" to="." method="_on_musico2_pressed"]
[connection signal="pressed" from="musico3" to="." method="_on_musico3_pressed"]
